# cypherglot

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  things-to-do.md
.github/workflows/: build-docs.yml  deploy-docs.yml  generated-cypher.yml  publish-pypi.yml  test.yml
docs/: index.md
docs/development/: documentation.md  release-candidate.md  release.md
docs/getting-started/: installation.md  quickstart.md
papers/: README.md
scripts/: README.md  __init__.py
tests/: _postgres_runtime_support.py  _sqlite_runtime_type_aware_support.py  conftest.py  test_benchmark_arcadedb_embedded_runtime.py  test_benchmark_compiler.py  test_benchmark_ladybug_runtime.py  test_benchmark_neo4j_runtime.py  test_benchmark_postgresql_backend.py  test_benchmark_schema_sqlite_shapes.py  test_benchmark_sql_runtime_core.py  test_benchmark_sql_runtime_entrypoints.py  test_benchmark_sqlite_backend.py  test_benchmark_sqlite_runtime.py  test_compile.py  test_compile_multihop.py  test_compile_optional.py  test_compile_programs.py  test_compile_programs_endpoints.py  test_compile_programs_traversal.py  test_compile_with.py  test_compile_with_relational.py  test_duckdb_read_parity.py  test_duckdb_runtime.py  test_import.py  test_ir.py  test_logging.py  test_normalize.py  test_normalize_optional_vector.py  test_normalize_with.py  test_parser.py  test_postgresql_read_parity.py  test_postgresql_runtime.py  test_render.py  test_render_backends.py  test_render_paths.py  test_render_paths_variable.py  test_render_paths_variable_bounded.py  test_render_paths_variable_chain.py  test_render_relational.py  test_run_runtime_matrix.py  (+15 more)
(+298 files in other folders)
