[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "cypherglot"
dynamic = ["version"]
description = "Cypher frontend compiler that lowers Neo4j-like Cypher into SQLGlot AST"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "HumemAI" },
]
dependencies = [
  "sqlglot[c]>=30,<31",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Compilers",
]
keywords = ["cypher", "sqlglot", "compiler", "graph", "database"]

[project.urls]
Homepage = "https://github.com/humemai/cypherglot"
Documentation = "https://docs.humem.ai/cypherglot/"
Repository = "https://github.com/humemai/cypherglot"
Issues = "https://github.com/humemai/cypherglot/issues"

[dependency-groups]
docs = [
  "mike>=2.1,<3",
  "mkdocs-material>=9.6,<10",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.version.raw-options]
fallback_version = "0.1.0"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/cypherglot"]
